--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
 
     <div class="container">
-      <!-- Example row of columns -->
+      <!-- Actualizacion linea 2 -->
       <div class="row">
         <div class="col-md-4">
           <h2>Cabezera</h2>
